[package]
name = "r-nom"
version = "0.1.0"
edition = "2021"

[[bench]]
name = "bench"
harness = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.1"
nom-supreme = "0.8.0"
indent_write = "2.2.0"
memchr = "2.5.0"
bytes = "1.1.0"


[dev-dependencies]
criterion = "0.3.6"
